# booking

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/hotels/: dao.py  router.py
app/hotels/rooms/: dao.py  models.py  router.py  schemas.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 2024_06_26_2247-eec8fdfd4b05_initial_migrate_create_hotels_table.py  2024_06_27_1738-11a4a8a7a2a8_initial_migrate_create_hotels_table.py  2024_06_27_1754-07cd812c2540_create_users_table.py  2024_06_27_1759-0fa1b8200bbd_create_rooms_table.py  2024_06_27_1800-17185833284f_create_bookings_table.py
app/pages/: router.py
app/tasks/: celery.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py  mock_users.json
app/tests/integration_test/test_bookings/: test_dao.py
app/tests/integration_test/test_users/: test_api.py
app/tests/unit_test/test_users/: test_dao.py
app/users/: auth.py  dependencies.py  models.py  router.py
