[tool.poetry]
name = "booking"
version = "0.1.0"
description = ""
authors = ["Anton <patrin_toxa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

